style: alignment fixes

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,7 +5,7 @@
   --spacing-xtiny: 4px;
   --spacing-tiny: 8px;
   --spacing-small: 12px;
-  --spacing-mini: 16px;
+  --spacing-mini: 18px;
   --spacing-base: 24px;
   --spacing-medium: 32px;
   --spacing-large: 48px;
